--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_svg: ^0.22.0
+  fl_chart: ^0.36.1
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
