Added internet permission to android manifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fintech">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="fintech"
         android:icon="@mipmap/ic_launcher">
